packages/default/scss/pivotgrid/_layout.scss
/* ... */
@include exports("pivotgrid/layout/rtl") {

    .k-pivotgrid {
        .k-rtl &,
        &.k-rtl,
        [dir="rtl"] &,
        &[dir="rtl"] {

        }
    }

}


@include exports( "pivotgrid/layout/export" ) {

    .k-pdf-export-shadow {

        .k-pivotgrid {
            height: auto !important; // sass-lint:disable-line no-important
        }

        .k-pivotgrid-values  {
            height: auto;
            overflow: visible;
        }

        .k-pivotgrid-column-headers .k-pivotgrid-table {
            padding-inline-end: 0;
        }

    }
}


@include exports("pivotgrid/layout/legacy") {

    .k-pivot {
        border-width: $kendo-pivotgrid-border-width;
        border-style: solid;
        position: relative;

        .k-grid td {
            white-space: nowrap;
        }

        .k-grid-content {
            flex: 1 1 auto;
        }
    }

    .k-pivot-toolbar {
        border-width: 0 0 1px;
        border-style: solid;
        align-items: flex-start;
        flex-wrap: wrap;
        box-shadow: none;

        > * {
            max-width: 100%;
        }

        &::before {
            display: none;
        }
    }

    .k-pivot-layout {
        border-spacing: 0;
        table-layout: auto;

        .k-grid-footer,
        .k-grid .k-table-alt-row {
            font-weight: bold;
        }
    }

    .k-pivot-layout > tbody,
    .k-pivot td {
        vertical-align: top;
    }

    .k-pivot-layout > tbody > tr > td {
        padding: 0;
    }

    .k-pivot-rowheaders > .k-grid,
    .k-pivot-table > .k-grid {
        border-width: 0;
        color: inherit;
        background: none;
    }

    .k-pivot-rowheaders > .k-grid td:first-child,
    .k-pivot-table .k-grid-header .k-header.k-first {
        border-left-width: 1px;
    }

    .k-pivot-rowheaders > .k-grid td.k-first {
        border-left-width: 0;
    }

    .k-pivot-rowheaders > .k-grid {
        overflow: hidden;
    }

    .k-pivot-table {
        border-left-width: 1px;
        border-left-style: solid;
    }

    .k-pivot-table .k-grid-header-wrap {
        margin-right: -1px;
    }

    .k-pivot-table .k-grid-header-wrap > table {
        height: 100%;
    }

    .k-pivot .k-grid-header .k-header {
        vertical-align: top;
    }

    .k-pivot .k-grid tr {
        .k-grid-footer {
            border-bottom-width: 0;
        }
        &:last-child:not(.k-grid-footer) {
            td:not(.k-grid-footer) {
                border-bottom-width: 1px;
            }
        }
    }

    .k-pivot-layout .k-grid td {
        border-bottom-width: 1px;
    }

    .k-pivot-layout .k-grid-footer > td {
        border-top-width: 0;
    }

    .k-pivot-filter-window .k-treeview {
        max-height: 600px;
    }

}




@include exports("pivotgrid/configurator/layout/legacy") {


    // jquery specific -- old pivot
    .k-pivotgrid-wrapper {
        box-sizing: border-box;
        display: flex;
        flex-flow: row nowrap;
        align-items: flex-start;
        gap: k-map-get( $kendo-spacing, 2 );

        > .k-pivotgrid-configurator-panel {
            max-width: 320px;
            flex: none;
        }
        > .k-pivot {
            flex: 1;
        }
    }
    .k-pivotgrid-configurator-panel.kendo-jquery {
        box-sizing: border-box;
        display: inline-flex;

        .k-pivotgrid-configurator {
            height: 100%;
        }

        .k-pivotgrid-configurator-content {
            padding: k-map-get( $kendo-spacing, 4 );
            max-height: 100%;
            display: flex;
            flex-flow: column nowrap;
            gap: k-map-get( $kendo-spacing, 4 );
            overflow-x: hidden;
            overflow-y: auto;
        }

        .k-pivotgrid-targets {
            display: flex;
            flex-flow: column nowrap;
            gap: k-map-get( $kendo-spacing, 4 );
        }

        .k-pivotgrid-configurator-section {
            display: flex;
            flex-flow: column nowrap;
            gap: k-map-get( $kendo-spacing, 2 );
        }

        .k-column-fields {
            margin: 0;
            padding: k-map-get( $kendo-spacing, 1 );
            max-height: 200px;
            border-width: 1px;
            border-style: solid;
            display: flex;
            flex-flow: row wrap;
            gap: k-map-get( $kendo-spacing, 1 );
            overflow-x: hidden;
            overflow-y: auto;

            > * {
                margin: 0;
            }
        }
    }

}

